deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sched-slack-bot
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: sched-slack-bot
  template:
    metadata:
      labels:
        app: sched-slack-bot
    spec:
      containers:
        - image: ghcr.io/germandrummer92/schedslackbot:v11
          imagePullPolicy: Always
          name: sched-slack-bot
          ports:
            - containerPort: 3000
              name: http-port
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1Gi
      volumes:
      - name: sched-slack-bot-secret
        secret:
          secretName: sched-slack-bot-secret
---
apiVersion: v1
kind: Service
metadata:
  name: sched-slack-bot
spec:
  ports:
    - port: 3000
      targetPort: http-port
  selector:
    app: sched-slack-bot
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sched-slack-bot
  namespace: default
spec:
  rules:
    - host: sched-slack-bot.CLUSTER_DOMAIN
      http:
        paths:
          - backend:
              serviceName: sched-slack-bot
              servicePort: 3000
  tls:
    - hosts:
        - sched-slack-bot.CLUSTER_DOMAIN
      secretName: TLS_SUFFIX
